# feastfilter

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
feastfilter/: asgi.py  settings.py  urls.py  wsgi.py
feastinsight/: admin.py  apps.py  forms.py  get_sentiment.py  models.py  places.py  prompts.py  urls.py  views.py
feastinsight/ai_functions/: anthropic_functions.py  openai.py  openai_functions.py
feastinsight/management/commands/: add_enhanced_name.py  add_sentiment.py  add_short_description.py  add_theme.py  get_places_data.py  write_ai_insight.py
feastinsight/migrations/: 0001_initial.py  0002_place_enhanced_name_review_sentiment_review_theme.py  0003_alter_place_id.py  0004_review_openai_sentiment.py  0005_remove_review_sentiment.py  0006_review_anthropic_sentiment.py  0007_remove_review_theme.py  0008_review_openai_theme.py  0009_review_anthropic_theme.py  0010_remove_place_enhanced_name.py  0011_place_openai_enhanced_name.py  0012_place_anthropic_enhanced_name.py
feastinsight/templates/feastinsight/: chat_bot.html  home.html
